apps/prometheus/overlays/ops/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    link.argocd.argoproj.io/external-link: https://prometheus.unset-127-0-0-1.nip.io # kpt-set: https://prometheus.${host}
spec:
  hosts:
    - "prometheus.unset-127-0-0-1.nip.io" # kpt-set: prometheus.${host}
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: prometheus-server.monitoring.svc.cluster.local
